[#731]support instance isolation for client invocation

--- a/integration-tests/discovery-tests/order-consumer/src/main/resources/application.yaml
+++ b/integration-tests/discovery-tests/order-consumer/src/main/resources/application.yaml
@@ -19,3 +19,9 @@ spring:
     servicecomb:
       loadbalancer.price:
         retryOnSame: 1
+feign:
+  client:
+    config:
+      default:
+        connectTimeout: 1000
+        readTimeout: 30000
