--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-service-engine/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-service-engine/pom.xml
@@ -52,5 +52,9 @@
       <groupId>com.huaweicloud</groupId>
       <artifactId>spring-cloud-starter-huawei-hessian</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.huaweicloud</groupId>
+      <artifactId>spring-cloud-starter-huawei-dashboard</artifactId>
+    </dependency>
   </dependencies>
 </project>
