--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
     <module>spring-cloud-huawei-router-client</module>
     <module>spring-cloud-huawei-swagger</module>
     <module>spring-cloud-huawei-governance</module>
+    <module>spring-cloud-huawei-dashboard</module>
   </modules>
 
   <licenses>
