--- a/spring-cloud-starter-huawei/pom.xml
+++ b/spring-cloud-starter-huawei/pom.xml
@@ -39,6 +39,7 @@
     <module>spring-cloud-starter-huawei-jasypt</module>
     <module>spring-cloud-starter-huawei-hessian</module>
     <module>spring-cloud-starter-huawei-actuator</module>
+    <module>spring-cloud-starter-huawei-dashboard</module>
   </modules>
 
 </project>
