[#750]support report metrics to CSE dashboard

--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-service-engine-gateway/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-service-engine-gateway/pom.xml
@@ -48,5 +48,9 @@
       <groupId>com.huaweicloud</groupId>
       <artifactId>spring-cloud-starter-huawei-jasypt</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.huaweicloud</groupId>
+      <artifactId>spring-cloud-starter-huawei-dashboard</artifactId>
+    </dependency>
   </dependencies>
 </project>
