--- a/integration-tests/cse-v1/consumer/src/main/resources/bootstrap.yml
+++ b/integration-tests/cse-v1/consumer/src/main/resources/bootstrap.yml
@@ -35,6 +35,9 @@ spring:
         fileSource: consumer.yaml
         watch:
           delay: 10000
+      dashboard:
+        enabled: true
+        address: https://cse.cn-south-1.myhuaweicloud.com
 
       credentials:
         enabled: true
