--- a/integration-tests/cse-v1/gateway/src/main/resources/bootstrap.yml
+++ b/integration-tests/cse-v1/gateway/src/main/resources/bootstrap.yml
@@ -34,6 +34,9 @@ spring:
         fileSource: gateway.yaml
         watch:
           delay: 10000
+      dashboard:
+        enabled: true
+        address: https://cse.cn-south-1.myhuaweicloud.com
 
       credentials:
         enabled: true
