[#764] client isolation support force open and force closed

--- a/integration-tests/discovery-tests/gateway/src/main/resources/application.yaml
+++ b/integration-tests/discovery-tests/gateway/src/main/resources/application.yaml
@@ -44,12 +44,20 @@ servicecomb:
       matches:
         - apiPath:
             prefix: "/"
+    gatewayIsolationForceOpenFeign: |
+      matches:
+        - apiPath:
+            prefix: "/govern/gatewayIsolationForceOpenFeign"
   instanceIsolation:
     allOperation: |
       minimumNumberOfCalls: 10
       slidingWindowSize: 10
       slidingWindowType: COUNT_BASED
       failureRateThreshold: 20
+      order: 2
+    gatewayIsolationForceOpenFeign: |
+      forceOpen: true
+      order: 1
 
 management:
   endpoint:
