--- a/spring-cloud-huawei-common/pom.xml
+++ b/spring-cloud-huawei-common/pom.xml
@@ -87,6 +87,10 @@
       <groupId>org.apache.servicecomb</groupId>
       <artifactId>service-center-client</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-core</artifactId>
+    </dependency>
 
     <!-- begin extensions module -->
     <dependency>
