[#802]make service and instance configuration standard

--- a/integration-tests/discovery-tests/price-provider/src/main/resources/bootstrap.yaml
+++ b/integration-tests/discovery-tests/price-provider/src/main/resources/bootstrap.yaml
@@ -23,6 +23,14 @@ spring:
     name: price
   cloud:
     servicecomb:
+      service:
+        properties:
+          x-test: value
+          x-test2: value2
+      instance:
+        properties:
+          x-test: value
+          x-test2: value2
       discovery:
         enabled: true
         # testing multiple registries
