--- a/integration-tests/discovery-tests/order-consumer/src/main/resources/bootstrap.yaml
+++ b/integration-tests/discovery-tests/order-consumer/src/main/resources/bootstrap.yaml
@@ -24,11 +24,20 @@ spring:
     name: order
   cloud:
     servicecomb:
+      service:
+        name: order
+        version: 0.0.1
+        properties:
+          x-test: value
+          x-test2: value2
+      instance:
+        initialStatus: UP
+        properties:
+          x-test: value
+          x-test2: value2
       discovery:
         enabled: true
         address: http://127.0.0.1:30100
-        serviceName: order
-        version: 0.0.1
       config:
         enabled: true
         serverType: kie
