--- a/integration-tests/cse-v2/gateway/src/main/resources/application.yaml
+++ b/integration-tests/cse-v2/gateway/src/main/resources/application.yaml
@@ -39,27 +39,27 @@ servicecomb:
     demo-rateLimiting: |
       matches:
         - apiPath:
-            exact: "/sayHello"
+            exact: "/jasypt3"
     demo-retry: |
       matches:
         - apiPath:
-            prefix: "/sayHello"
+            prefix: "/jasypt3"
     demo-circuitBreaker: |
       matches:
         - apiPath:
-            exact: "/sayHello"
+            exact: "/jasypt3"
     demo-bulkhead: |
       matches:
         - apiPath:
-            exact: "/sayHello"
+            exact: "/jasypt3"
     demo-faultInjectDelay: |
       matches:
         - apiPath:
-            contains: "/sayHello1"
+            contains: "/jasypt3"
     demo-faultInjectAbort: |
       matches:
         - apiPath:
-            contains: "/sayHello"
+            contains: "/jasypt4"
   rateLimiting:
     demo-rateLimiting: |
       rate: 10
@@ -78,10 +78,10 @@ servicecomb:
     demo-faultInjectDelay: |
       type: delay
       delayTime: 3S
-      percentage: 1
+      percentage: 50
     demo-faultInjectAbort: |
       type: abort
-      percentage: 100
+      percentage: 50
       errorCode: 490
 
 management:
