--- a/integration-tests/discovery-tests/gateway/src/main/resources/application.yaml
+++ b/integration-tests/discovery-tests/gateway/src/main/resources/application.yaml
@@ -48,6 +48,10 @@ servicecomb:
       matches:
         - apiPath:
             prefix: "/govern/gatewayIsolationForceOpenFeign"
+    faultInjection: |
+      matches:
+        - apiPath:
+            prefix: "/price/faultInjection"
   instanceIsolation:
     allOperation: |
       minimumNumberOfCalls: 10
@@ -58,6 +62,11 @@ servicecomb:
     gatewayIsolationForceOpenFeign: |
       forceOpen: true
       order: 1
+  faultInjection:
+    faultInjection: |
+      type: delay
+      delayTime: 1000
+      percentage: 100
 
 management:
   endpoint:
