[#807] 增加微服务间黑白名单鉴权功能

--- a/spring-cloud-huawei-governance/pom.xml
+++ b/spring-cloud-huawei-governance/pom.xml
@@ -84,6 +84,10 @@
       <artifactId>spring-cloud-gateway-server</artifactId>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>com.huaweicloud</groupId>
+      <artifactId>spring-cloud-huawei-discovery</artifactId>
+    </dependency>
     <!-- end extensions module -->
   </dependencies>
 </project>
