update demo to support publickey configuration

--- a/integration-tests/cse-v2/consumer/src/main/resources/application.yaml
+++ b/integration-tests/cse-v2/consumer/src/main/resources/application.yaml
@@ -18,3 +18,11 @@
 
 server:
   port: 8082
+spring:
+  cloud:
+    servicecomb:
+      webmvc:
+        governance:
+          publickey:
+            consumer:
+              enabled: true
