--- a/integration-tests/cse-v2/provider/src/main/resources/application.yaml
+++ b/integration-tests/cse-v2/provider/src/main/resources/application.yaml
@@ -18,3 +18,30 @@
 
 server:
   port: 8080
+spring:
+  cloud:
+    servicecomb:
+      webmvc:
+        governance:
+          publickey:
+            provider:
+              enabled: true
+
+servicecomb:
+  publickey:
+    accesscontrol:
+      black:
+        - category: property
+          propertyName: serviceName
+          # property value match expression.
+          # only supports prefix match and postfix match and exactly match.
+          # e.g. hacker*, *hacker, hacker basic-consumer
+          rule: hacker
+        - category: property
+          propertyName: serviceName
+          rule: hacker2
+
+      white:
+        - category: property
+          propertyName: serviceName
+          rule: basic*
