--- a/integration-tests/discovery-tests/price-provider/src/main/resources/application.yaml
+++ b/integration-tests/discovery-tests/price-provider/src/main/resources/application.yaml
@@ -15,6 +15,14 @@
 ## See the License for the specific language governing permissions and
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
+spring:
+  cloud:
+    servicecomb:
+      webmvc:
+        governance:
+          publickey:
+            provider:
+              enabled: true
 
 servicecomb:
   matchGroup:
@@ -24,14 +32,24 @@ servicecomb:
         - apiPath:
             exact: "/rate/testRateLimitForService"
           serviceName: order
-    demo-identifierRateLimitingService: |
-      matches:
-        - apiPath:
-            exact: "/rate/identifierRateLimitingService"
-          serviceName: order
   rateLimiting:
     rateLimiting-order: |
       rate: 1
-    demo-identifierRateLimitingService: |
-      rate: 2
-      identifier: user-name
+
+  publickey:
+    accesscontrol:
+      black:
+        - category: property
+          propertyName: serviceName
+          # property value match expression.
+          # only supports prefix match and postfix match and exactly match.
+          # e.g. hacker*, *hacker, hacker basic-consumer
+          rule: hacker
+        - category: property
+          propertyName: serviceName
+          rule: hacker2
+
+      white:
+        - category: property
+          propertyName: serviceName
+          rule: order*
