--- a/integration-tests/discovery-tests/order-consumer/src/main/resources/application.yaml
+++ b/integration-tests/discovery-tests/order-consumer/src/main/resources/application.yaml
@@ -25,10 +25,8 @@ spring:
       loadbalancer.price:
         retryOnSame: 1
       webmvc:
-        governance:
-          publickey:
-            consumer:
-              enabled: true
+        publicKey:
+          consumerEnabled: true
 
 feign:
   client:
