--- a/integration-tests/discovery-tests/price-provider/src/main/resources/application.yaml
+++ b/integration-tests/discovery-tests/price-provider/src/main/resources/application.yaml
@@ -19,10 +19,24 @@ spring:
   cloud:
     servicecomb:
       webmvc:
-        governance:
-          publickey:
-            provider:
-              enabled: true
+        publicKey:
+          providerEnabled: true
+          accessControl:
+            black:
+              - category: property
+                propertyName: serviceName
+                # property value match expression.
+                # only supports prefix match and postfix match and exactly match.
+                # e.g. hacker*, *hacker, hacker basic-consumer
+                rule: hacker
+              - category: property
+                propertyName: serviceName
+                rule: hacker2
+
+            white:
+              - category: property
+                propertyName: serviceName
+                rule: order*
 
 servicecomb:
   matchGroup:
