[#835]fix webmvc identifier rate limiting context problem (#839)

--- a/integration-tests/discovery-tests/price-provider/src/main/resources/application.yaml
+++ b/integration-tests/discovery-tests/price-provider/src/main/resources/application.yaml
@@ -25,6 +25,14 @@ servicecomb:
         - apiPath:
             exact: "/rate/testRateLimitForService"
           serviceName: order
+    demo-identifierRateLimitingService: |
+      matches:
+        - apiPath:
+            exact: "/rate/identifierRateLimitingService"
+          serviceName: order
   rateLimiting:
     rateLimiting-order: |
       rate: 1
+    demo-identifierRateLimitingService: |
+      rate: 2
+      identifier: user-name
