[#807] 增加微服务间黑白名单鉴权功能 (#827)

--- a/integration-tests/discovery-tests/order-consumer/src/main/resources/application.yaml
+++ b/integration-tests/discovery-tests/order-consumer/src/main/resources/application.yaml
@@ -24,6 +24,10 @@ spring:
           query-context: x-query-context
       loadbalancer.price:
         retryOnSame: 1
+      webmvc:
+        publicKey:
+          consumerEnabled: true
+
 feign:
   client:
     config:
