--- a/integration-tests/discovery-tests/account-provider/src/main/resources/bootstrap.yaml
+++ b/integration-tests/discovery-tests/account-provider/src/main/resources/bootstrap.yaml
@@ -41,3 +41,23 @@ spring:
       # testing spring cloud swagger generation
       swagger:
         enableJavaChassisAdapter: false
+
+      webmvc:
+        publicKey:
+          providerEnabled: true
+          accessControl:
+            black:
+              - category: property
+                propertyName: serviceName
+                # property value match expression.
+                # only supports prefix match and postfix match and exactly match.
+                # e.g. hacker*, *hacker, hacker basic-consumer
+                rule: hacker
+              - category: property
+                propertyName: serviceName
+                rule: hacker2
+
+            white:
+              - category: property
+                propertyName: serviceName
+                rule: order*
