[#854] The request is suspended because the number of retries is too large

--- a/integration-tests/discovery-tests/gateway/src/main/resources/application.yaml
+++ b/integration-tests/discovery-tests/gateway/src/main/resources/application.yaml
@@ -74,6 +74,10 @@ servicecomb:
       matches:
         - apiPath:
             exact: "/govern/gatewayRetry"
+    gatewayRetryMore: |
+      matches:
+        - apiPath:
+            exact: "/govern/gatewayRetryMore"
     gatewayIsolationForceOpenFeign: |
       matches:
         - apiPath:
@@ -94,6 +98,9 @@ servicecomb:
     gatewayRetry: |
       maxAttempts: 2
       retryOnSame: 0
+    gatewayRetryMore: |
+      maxAttempts: 5
+      retryOnSame: 1
   rateLimiting:
     demo-rateLimiting: |
       rate: 10
