--- a/spring-cloud-huawei-governance/pom.xml
+++ b/spring-cloud-huawei-governance/pom.xml
@@ -70,6 +70,11 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webflux</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>io.github.openfeign</groupId>
       <artifactId>feign-core</artifactId>
       <scope>provided</scope>
